--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@hapi/iron": "^7.0.1",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.12.2",
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -18,6 +22,7 @@
     "bcrypt": "^5.1.0",
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
+    "draft-js": "^0.11.7",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "mongoose": "^7.0.4",
@@ -30,8 +35,11 @@
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@styled-jsx/plugin-sass": "^4.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cookie": "^0.5.1",
-    "@types/cookies": "^0.7.7"
+    "@types/cookies": "^0.7.7",
+    "@types/draft-js": "^0.11.10",
+    "sass": "^1.62.1"
   }
 }
