--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@hapi/iron": "^7.0.1",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.12.2",
+    "@types/lodash": "^4.14.194",
     "@types/node": "18.15.13",
     "@types/react": "18.0.37",
     "@types/react-dom": "18.0.11",
@@ -23,13 +24,17 @@
     "cookie": "^0.5.0",
     "cookies": "^0.8.0",
     "draft-js": "^0.11.7",
+    "draft-js-export-html": "^1.4.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "lodash": "^4.17.21",
     "mongoose": "^7.0.4",
     "next": "13.3.0",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loading-skeleton": "^3.2.1",
+    "sanitize-html": "^2.10.0",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
     "typescript": "5.0.4"
@@ -40,6 +45,7 @@
     "@types/cookie": "^0.5.1",
     "@types/cookies": "^0.7.7",
     "@types/draft-js": "^0.11.10",
+    "@types/sanitize-html": "^2.9.0",
     "sass": "^1.62.1"
   }
 }
