--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "sanitize-html": "^2.10.0",
     "swr": "^2.1.5",
     "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@styled-jsx/plugin-sass": "^4.0.2",
@@ -46,6 +47,7 @@
     "@types/cookies": "^0.7.7",
     "@types/draft-js": "^0.11.10",
     "@types/sanitize-html": "^2.9.0",
+    "@types/uuid": "^9.0.1",
     "sass": "^1.62.1"
   }
 }
